[build-system]
requires = [
    "psutil>=5.9.0",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "atlasserver"
authors = [{ name = "Luke Shingles", email = "luke.shingles@gmail.com" }]
description = "ATLAS Forced Photometry server"
classifiers = ["License :: OSI Approved :: MIT License"]
license = { text = "MIT" }
dynamic = ["version"]
requires-python = ">=3.13"
readme = { file = "README.md", content-type = 'text/markdown' }
dependencies = [
    "astrocalc>=0.4.2",
    "astropy>=6.1.0",
    "bokeh==3.7.2",
    "django>=5.0.9",
    "django-filter>=24.2",
    "django-stubs[compatible-mypy]>=5.0.0",
    "djangorestframework>=3.15.1",
    "djangorestframework-stubs>=3.15.0",
    "fundamentals>=2.6.4",
    "geoip2>=4.8.1",
    "julian>=0.14",
    "markdown>=3.6",
    "matplotlib>=3.8.4",
    "mysqlclient>=2.2.4",
    "pandas>=2.2.2",
    "polars>=1.2.1",
    "pycountry>=23.12.11",
    "pylint>=3.2.6",
    "pylint-django>=2.5.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.5.3",
    "types-pyyaml>=6.0.12.20240311",
    "types-requests>=2.31.0.20240406",
]

[project.urls]
Repository = "https://github.com/lukeshingles/atlasserver"

[project.scripts]
atlaswebserver = 'atlasserver.atlaswebserver:main'
atlastaskrunner = 'atlasserver.atlastaskrunner:main'

[tool.black]
line-length = 120
force-exclude = "plot_atlas_fp.py"

[tool.mypy]
python_version = "3.13"
exclude = "(build)|(tests)|(migrations)|(static)|plot_atlas_fp.py"
ignore_missing_imports = true
plugins = "mypy_django_plugin.main,numpy.typing.mypy_plugin"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
extra_checks = true
files = "**/*.py"
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false
disallow_any_generics = false
disallow_subclassing_any = false

[tool.django-stubs]
django_settings_module = "atlasserver.settings"
ignore_missing_model_attributes = true

[tool.pylint]
max-line-length = 120
errors-only = true
load-plugins = "pylint_django"
django-settings-module = "atlasserver.settings"

[tool.pylint.typecheck]
ignored-modules = ["astropy", "extinction"]

[tool.pylint.MASTER]
ignore-paths = "atlasserver/plot_atlas_fp.py"

[tool.pyright]
typeCheckingMode = "off"
exclude = [
    '**/node_modules',
    '**/__pycache__',
    '**/.*',
    'build',
    'dist',
    'target',
    '**/plot_atlas_fp.py',
]

[tool.typos]
files.extend-exclude = ["**/plot_atlas_fp.py"]

[tool.ruff]
extend-exclude = ["plot_atlas_fp.py"]
line-length = 120
target-version = "py313"
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A001",
    "A002",
    "A003",
    "ARG001",  # ignored because variables in df.eval() are not detected
    "ARG002",
    "ANN",
    "BLE001",
    "C901",    # complex-structure
    "COM812",  # missing-trailing-comma
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D106",
    "D107",    # undocumented-public-init
    "D203",    # one-blank-line-before-class
    "D204",
    "D213",    # multi-line-summary-second-line
    "D417",    # undocumented-param
    "DJ001",
    "E402",
    "E501",    # Line too long
    "ERA001",  # commented-out-code
    "FBT",
    "FIX002",  # line contains TODO
    "INP001",
    "ISC001",
    "PGH003",
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR2004", # magic-value-comparison
    "RUF012",
    "S101",    # Use of assert detected
    "S108",    # hardcoded-temp-file
    "S113",
    "S603",    # subprocess-without-shell-equals-true
    "S605",    # start-process-with-a-shell
    "S607",    # start-process-with-partial-path
    "SIM115",  # use context handler for opening files
    "T201",    # print found
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
]
fixable = ["ALL"]
unfixable = [
    "COM812", # missing-trailing-comma
    "ERA001", # commented-out-code (will just delete it!)
    "F841",   # unused-variable
    "SIM222", # expr-or-true
    "SIM223", # expr-and-false
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.per-file-ignores]
"plot_atlas_fp.py" = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
namespaces = false
where = ["."]
include = ["*", "**/matplotlibrc", "**/data"]
exclude = ["tests", "**/dist", "**/lib", "**/build", "*.egg-info", "**/.*"]

[tool.setuptools_scm]
write_to = "_version.py"
local_scheme = "no-local-version"
